# fastapi-in-production

./: Procfile  README.md  railway.toml  requirements.txt
fastapi-mlops-template/: .gitignore  pyproject.toml
fastapi-mlops-template/fastapi-frontend/: README.md  package.json
fastapi-mlops-template/fastapi-frontend/pages/: index.js
fastapi-mlops-template/fastapi-frontend/pages/api/: predict.js
fastapi-mlops-template/src/fastapi_mlops_template/: main.py
fastapi-mlops-template/src/fastapi_mlops_template/core/: config.py
fastapi-mlops-template/src/fastapi_mlops_template/infrastructure/: db_connection.py
fastapi-mlops-template/src/fastapi_mlops_template/schemas/: payload.py  response.py
fastapi-mlops-template/src/fastapi_mlops_template/services/: ml_predictor.py
